Fix color contrast accessibility issue on Organization Info Page
Issue #518 Implement accessibility checking in CI

--- a/psm-app/cms-web/WebContent/css/style.css
+++ b/psm-app/cms-web/WebContent/css/style.css
@@ -1388,7 +1388,7 @@ input.date{
   width:20%;
   float:left;
   display:inline;
-  color:#999999;
+  color:#737373;
   line-height:14px;
 }
 
